# blog_app

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.cursor/rules/: specify-rules.mdc
.specify/: README.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
.specify/templates/commands/: constitution.md  plan.md  specify.md  tasks.md
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  main.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  comment.py  post.py  user.py
app/routes/: __init__.py  auth.py  comments.py  pages.py  posts.py  users.py
app/schemas/: __init__.py  comment.py  post.py  user.py
app/services/: __init__.py  auth.py  comment.py  post.py  user.py
app/templates/: 404.html  500.html  base.html  index.html  login.html  post_detail.html  post_form.html  register.html  user_profile.html
specs/001-blog-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-blog-app/checklists/: requirements.md
specs/001-blog-app/contracts/: README.md  openapi.yaml
static/css/: style.css
static/js/: main.js
tests/: __init__.py  conftest.py  test_auth_api.py  test_auth_dependency.py  test_auth_service.py  test_comment_service.py  test_comments_api.py  test_post_service.py  test_posts_api.py  test_schemas.py  test_user_service.py  test_users_api.py
